# rust-cagent

./: Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: release.yml
docs/: spec.md
src/: main.rs  server.rs
src/agent/: mod.rs  server.rs
src/agent/claude/: attach.rs  mod.rs  pty.rs  run.rs  send.rs  server.rs  session.rs  subscribe.rs
src/agent/codex/: client.rs  mod.rs  protocol.rs  run.rs
src/app/: agent.rs  cron.rs  internal.rs  mod.rs
src/cli/: agent.rs  claude_server.rs  codex_server.rs  cron.rs  internal.rs  internal_claude_wrapper.rs  internal_codex_wrapper.rs  mod.rs  server.rs  telegram.rs
src/cron/: storage.rs
src/telegram/: bot.rs  config.rs  format.rs  mapping.rs  mod.rs
