[package]
name = "cagent"
version = "0.1.0"
edition = "2024"
description = "A CLI agent tool"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "5.0"
libc = "0.2"
notify = "7"
# https://github.com/wezterm/wezterm/tree/main/pty
portable-pty = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
teloxide = { version = "0.17", default-features = false, features = ["rustls", "ctrlc_handler", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "signal", "macros", "net", "io-util", "io-std", "time", "process"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
